[tool.poetry]
name = "pythonfundamentals"
version = "0.1.0"
description = "Fundamentals of Python"
authors = ["JasGujral <jasmeet.gujral@mostacktechnology.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
